fix: buttonv4 rainbow hover effect overflow

--- a/src/components/ButtonV4/ButtonV4.css
+++ b/src/components/ButtonV4/ButtonV4.css
@@ -42,10 +42,9 @@
 }
 .buttonv4-btn:hover:before {
   opacity: 1;
-  z-index: -1;
 }
 .buttonv4-btn:hover:active {
-  background: none;
+  /* background: none; */
 }
 .buttonv4-btn:hover:active:before {
   filter: blur(2px);
